--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -11,4 +11,4 @@ logo : assets/image/kotlin-logo.png
 highlight : atom-one-light
 transition : none
 published : true
-footnote : "GitPitch [ Blue ] Presentation Template"
+footnote : "Kotlin | MC-8812 Teoría de los Lenguajes de Programación | Carlos Martín Flores"
